fix: opacity on Mobile

--- a/src/pages/HappyBirthdayHomie.css
+++ b/src/pages/HappyBirthdayHomie.css
@@ -4,6 +4,7 @@
 
 /* Background */
 .custom-emoji-background {
+  opacity: 0.12;
   position: fixed;
   top: 0;
   bottom: 0;
@@ -11,8 +12,7 @@
   right: 0px;
   z-index: 0;
   width: 300%;
-  /* background-color: rgba(255, 255, 255, 1); */
-  background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="90" height="75" viewBox="0 0 100 100"%3E%3Ctext x="50%25" y="50%25" dy=".35em" font-size="40" fill="rgba(204, 204, 204, 0.12)"%3E⛳%3C/text%3E%3C/svg%3E');
+  background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="90" height="75" viewBox="0 0 100 100"%3E%3Ctext x="50%25" y="50%25" dy=".35em" font-size="40" fill="rgba(204, 204, 204, 1)"%3E⛳%3C/text%3E%3C/svg%3E') ;
   background-repeat: repeat;
   transform: skewX(-5deg);
   animation: moving-animation 82s linear infinite;
